# llama2-rs

./: .gitignore  Cargo.toml  EXECUTION_TRACE.md  README.md
src/: lib.rs  main.rs  model.rs  sampler.rs  tfhe_model.rs  tfhe_tokenizer.rs  tfhe_utils.rs  tokenizer.rs  utils.rs
src/integer/: mod.rs  sampler.rs  tokenizer.rs  transformer.rs  utils.rs
src/integer/fixed_point/: exp.rs  matmul.rs  mod.rs  rmsnorm.rs  softmax.rs
src/tfhe/: utils.rs
src/trace/: entry.rs  merkle.rs  mod.rs  serialization.rs
