[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = []

[dependencies]
clap = "4.5.31"
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
memmap2 = "0.9.5"
rayon = "1.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"